--- a/index_meu.html
+++ b/index_meu.html
@@ -18,7 +18,7 @@
 			<h3>Desenvolvedor Web Junior</h3>
 		</div>	<!--fim dados superior -->
 
-		<div id="botao_superior"><!--inicio perfil -->
+		<div id="botao_superior"><!--inicio perfil topo-->
 			<ul class="resumo">
 				<div class="icone_local">
 					<li>
@@ -32,7 +32,7 @@
 				</div>
 				<div class="icone_local">
 					<li>
-					 <a href="https://wa.me/+5513981621226"><i class="fa-brands fa-whatsapp" style="color: #eff1f6;"></i></a> 
+					 <a href="https://api.whatsapp.com/send?phone=13996462026"><i class="fa-brands fa-whatsapp" style="color: #eff1f6;"></i></a> 
 					</li>
 				</div>
 				<div class="icone_local">
@@ -52,9 +52,27 @@
 				</div>
 
 			</ul>
-		</div><!--fim peril -->
+		</div><!--fim peril topo-->
+
+	</div><!--fim container1 -->
+	
+		<div id="container1"><!--inicio meio perfil mais botoes inferiores-->
+			<div class="foto_perfil container2">
+				<ul>
+				<img src="imagens/raining-money-crabby-crab.gif" width="350" height="450">
+				</ul>
+			</div>
+			<div class="dados_pessoal">
+				<ul>
+					<li><img src="imagens/icone_ola.png" width="250" height="50"></li>
+				</ul>
+			</div>
+		</div><!--fim meio perfil mais botoes inferiores-->
 		
-	</div>
+	<div><!--inicio botoes inferiores-->
+
+
+	</div><!--fim botoes inferiores-->
 
 </body>
 </html>
