--- a/index_meu.html
+++ b/index_meu.html
@@ -3,76 +3,53 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Forum</title>
 
+	<link rel="stylesheet" type="text/css" href="css/estilo_h.css">
 	<script src="https://kit.fontawesome.com/b62a8574ea.js" crossorigin="anonymous"></script>
-	<title>Minha Pagina</title>
-
-	<link rel="stylesheet" type="text/css" href="css/estilo_meu.css">
 
 </head>
+
 <body>
-	<div id="container1"><!--inicio container1 -->
-		
-		<div class="texto_botao"><!--inicio dados superior -->
-			<h1>Amauri Leonardi</h1>
-			<h3>Desenvolvedor Web Junior</h3>
-		</div>	<!--fim dados superior -->
 
-		<div id="botao_superior"><!--inicio perfil topo-->
-			<ul class="resumo">
-				<div class="icone_local">
-					<li>
-					 <a href="https://www.facebook.com/amaurileo"><i class="fa-brands fa-facebook" style="color: #e9eaed;"></i></a>
-					</li>
-				</div>
-				<div class="icone_local">
-					<li>
-					 <a href="https://www.linkedin.com/in/amauri-leonardi-b0a240aa/"><i class="fa-brands fa-linkedin" style="color: #e9ecf1;"></i></a> 
-					</li>
-				</div>
-				<div class="icone_local">
-					<li>
-					 <a href="https://api.whatsapp.com/send?phone=13996462026"><i class="fa-brands fa-whatsapp" style="color: #eff1f6;"></i></a> 
-					</li>
-				</div>
-				<div class="icone_local">
-					<li>
-					 <a href="https://twitter.com/AmauriLeo"><i class="fa-brands fa-twitter" style="color: #f2f4f8;"></i></a>
-					</li>
-				</div>
-				<div class="icone_local">
-					<li>
-					 <a href="https://github.com/AmauriLeonardi"><i class="fa-brands fa-github" style="color: #eceff3;"></i></a>
-					</li>
-				</div>
-				<div class="icone_local">
-					<li>
-					 <a href="https://twitter.com/AmauriLeo"><i class="fa-regular fa-floppy-disk" style="color: #f1f0f4;"></i></a>
-					</li>
-				</div>
+	<div id="container"><!--inicio container-->
+		<div id="topo"><!--inicio topo-->
+			<div id="area-logo"><!--inicio area logo-->
+				<h1 class="logo">
+					<p>Amauri Leonardi</p>
+				</h1>
+			</div><!--fim area logo-->
+			<div id="area-menu"><!--inicio area menu-->
+				<div id="conteudo-menu">
 
-			</ul>
-		</div><!--fim peril topo-->
+					<div id="menu_icones_top">
+						
+						<span class="fa-3x">
+							<a href="https://www.facebook.com/amaurileo"><i class="fa-brands fa-facebook fa-2xl" style="color: #f0f0f5;"></i></a>
+							<a href="https://www.linkedin.com/in/amauri-leonardi-b0a240aa/"><i class="fa-brands fa-linkedin fa-2xl" style="color: #f0f0f5;"></i></a> 
+							<a href="https://api.whatsapp.com/send?phone=13996462026"><i class="fa-brands fa-whatsapp fa-2xl" style="color: #f0f0f5;"></i></a> 
+							<a href="https://twitter.com/AmauriLeo"><i class="fa-brands fa-twitter fa-2xl" style="color: #f0f0f5;"></i></a>
+							<a href="https://github.com/AmauriLeonardi"><i class="fa-brands fa-github fa-2xl" style="color: #f0f0f5;"></i></a>
+							<a href=""><i class="fa-regular fa-floppy-disk fa-2xl" style="color: #f0f0f5;"></i></a>
+						</span>
+					</div>
 
-	</div><!--fim container1 -->
-	
-		<div id="container1"><!--inicio meio perfil mais botoes inferiores-->
-			<div class="foto_perfil container2">
-				<ul>
-				<img src="imagens/raining-money-crabby-crab.gif" width="350" height="450">
-				</ul>
-			</div>
-			<div class="dados_pessoal">
-				<ul>
-					<li><img src="imagens/icone_ola.png" width="250" height="50"></li>
-				</ul>
-			</div>
-		</div><!--fim meio perfil mais botoes inferiores-->
-		
-	<div><!--inicio botoes inferiores-->
+					<div id="dados">
+						<ol id="pessoal">
+							<li><p>Nome: Amauri Leonardi</p></li>
+							<li><p>Endereço: Rua Mario Augusto S. Lopes, 1049-Conjunto Humaitá-São Vicente-SP</p></li>
+							<li><p>Contatos: (13)98162-1226</p></li>
+							<li><a href="amauri_leonardi@outlook.com.br">E-mail: amauri_leonardi@outlook.com.br</a></li>
+							<li><a href="">WebSite:</p></li>
+						</ol>
+					</div>
 
-
-	</div><!--fim botoes inferiores-->
+				</div>
+				
+			</div><!--fim area menu-->
+			
+		</div><!--fim topo-->
+	</div><!--fim container-->
 
 </body>
 </html>
